# cloudless

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  message.py  room.py  transfer.py  user.py
backend/app/routers/: __init__.py  auth.py  rooms.py  transfer.py  websocket.py
backend/app/services/: __init__.py  auth.py  cleanup.py  crypto.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/room/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AppHeader.tsx  ChatWindow.tsx  FileBubble.tsx  FileDropzone.tsx  GlobalLoader.tsx  PeerStatus.tsx  SafetyNumber.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TransferProgress.tsx
frontend/src/components/room/: RoomHeader.tsx  SecurityBadge.tsx  VerifyIdentity.tsx
frontend/src/components/settings/: ChangePassword.tsx  InviteManagement.tsx  ProfileCard.tsx  SecurityInfo.tsx
frontend/src/hooks/: useLoader.ts
frontend/src/lib/: api.ts  chunker.ts  crypto.ts  roles.ts  webrtc.ts  websocket.ts  withAuth.tsx  withRoleProtection.tsx
frontend/src/store/: auth.ts  keys.ts  room.ts  theme.ts
